--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Web Dev</h1>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Mike Lofgren</h1>
+        <img src="media/Me.jpg" alt="A picture of a person on a bike">
+      </div>
+    </div>
   </body>
 </html>
