Add project links.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,26 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Mike Lofgren</h1>
-        <img src="media/Me.jpg" alt="A picture of a person on a bike">
+        <h1>Features for the future</h1>
       </div>
+        <img src="media/Me.jpg" alt="A picture of a person on a bike">
+        <h2>Projects</h2>
+
+        <h3>Alaska</h3>
+          <p><a href="https://mikearino.github.io/Alaska/">Outside</a></p>
+        <h3>Island Vacation</h3>
+          <p><a href="https://mikearino.github.io/Island_vacation/">Magic Awaits</a></p>
+        <h3>My Week at Epicodus</h3>
+          <p><a href="https://mikearino.github.io/week_in_review/">First week!</a></p>
+        <h3>Animal rescue</h3>
+          <p><a href="https://mikearino.github.io/dog_rescue/">OMG there's hope for dogs!</a></p>
+        <h3>Wiener Dog Blog</h3>
+          <p><a href="https://mikearino.github.io/peppeps-blog/">Wiener Dog Blog!</a></p>
+        <h3>Band Website</h3>
+          <p><a href="https://mikearino.github.io/band_webpage/">A generic band site!</a></p>
+
+
+
     </div>
   </body>
 </html>
