Add strong and em tags.

--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Features for the future</h1>
+        <h1>Features for the <em>future</em></h1>
       </div>
         <img src="media/Me.jpg" alt="A picture of a person on a bike">
         <h2>Projects</h2>
 
         <h3>Alaska</h3>
-          <p><a href="https://mikearino.github.io/Alaska/">Outside</a></p>
-        <h3>Island Vacation</h3>
-          <p><a href="https://mikearino.github.io/Island_vacation/">Magic Awaits</a></p>
+          <p><a href="https://mikearino.github.io/Alaska/"><strong>Outside</strong></a>A place I would like to visit someday. Uses Html and bootstrap.</p>
         <h3>My Week at Epicodus</h3>
-          <p><a href="https://mikearino.github.io/week_in_review/">First week!</a></p>
+          <p><a href="https://mikearino.github.io/week_in_review/"><strong>First week!</strong></a>What I did my first week at Epicodus. Uses HTML, css and bootstrap.</p>
         <h3>Animal rescue</h3>
-          <p><a href="https://mikearino.github.io/dog_rescue/">OMG there's hope for dogs!</a></p>
+          <p><a href="https://mikearino.github.io/dog_rescue/"><strong>OMG there's hope for dogs!</strong></a>A dog rescue page that uses HTML and css.</p>
+        <h3>Island Vacation</h3>
+          <p><a href="https://mikearino.github.io/Island_vacation/"><strong>Magic Awaits</strong></a>Showcasing the Maldives. Uses Html and css.</p>
         <h3>Wiener Dog Blog</h3>
-          <p><a href="https://mikearino.github.io/peppeps-blog/">Wiener Dog Blog!</a></p>
+          <p><a href="https://mikearino.github.io/peppeps-blog/"><strong>Wiener Dog Blog!</strong></a>A blog for my wiener dog named PepPep. Uses Html and css.</p>
         <h3>Band Website</h3>
-          <p><a href="https://mikearino.github.io/band_webpage/">A generic band site!</a></p>
+          <p><a href="https://mikearino.github.io/band_webpage/"><strong>A generic band site!</strong></a>A band website showcasing floats. Uses Html and css.</p>
 
 
 
