add about section, contact, interest and background.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,32 @@
         <h3>Band Website</h3>
           <p><a href="https://mikearino.github.io/band_webpage/"><strong>A generic band site!</strong></a>A band website showcasing floats. Uses Html and css.</p>
 
+        <h3>About this guy</h3>
+        <p>I used to play with Legos, now I build out epic sites.</p>
 
+        <h4>Where I'm from</h4>
+        <ul>
+          <li>Portland native</li>
+          <li>Background in motorcycle mechanics</li>
+          <li>Relentless knowledge of beer and wine</li>
+          <li>Stoked on web development</li>
+        </ul>
 
+        <h4>What I like to do</h4>
+        <ul>
+          <li>Riverfish</li>
+          <li>Reach the Beach</li>
+          <li>Mountainbike</li>
+          <li>Synthesizering</li>
+          <li>Make Joke</li>
+        </ul>
+
+        <h4>HMU</h4>
+          <ul>
+            <li><a href="mailto:mikeylofgren@gmail.com?subject=feedback">email me</a></li>
+            <li><a href="https://www.instagram.com/mikearino/">Insta</a></li>
+            <li><a href="https://www.facebook.com/mike.lofgren.92"></a>FB</li>
+          </ul>
     </div>
   </body>
 </html>
