Add sidebar for contact info.

--- a/index.html
+++ b/index.html
@@ -39,20 +39,24 @@
         </ul>
 
         <h4>What I like to do</h4>
-        <ul>
-          <li>Riverfish</li>
+        <ol>
           <li>Reach the Beach</li>
           <li>Mountainbike</li>
+          <li>Riverfish</li>
           <li>Synthesizering</li>
           <li>Make Joke</li>
-        </ul>
+        </ol>
 
-        <h4>HMU</h4>
+
+        <div class="sidebar">
+          <h4 id="link">Links</h4>
           <ul>
-            <li><a href="mailto:mikeylofgren@gmail.com?subject=feedback">email me</a></li>
+            <li><a href="mailto:mikeylofgren@gmail.com?subject=feedback">Email</a></li>
             <li><a href="https://www.instagram.com/mikearino/">Insta</a></li>
-            <li><a href="https://www.facebook.com/mike.lofgren.92"></a>FB</li>
+            <li><a href="https://www.facebook.com/mike.lofgren.92">FB</a></li>
           </ul>
+        </div>
+
     </div>
   </body>
 </html>
