Add panels to projects.

--- a/index.html
+++ b/index.html
@@ -9,23 +9,76 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Features for the <em>future</em></h1>
+        <h1>Feature <em>future</em></h1>
       </div>
         <img src="media/Me.jpg" alt="A picture of a person on a bike">
         <h2>Projects</h2>
 
-        <h3>Alaska</h3>
-          <p><a href="https://mikearino.github.io/Alaska/"><strong>Outside</strong></a>A place I would like to visit someday. Uses Html and bootstrap.</p>
-        <h3>My Week at Epicodus</h3>
-          <p><a href="https://mikearino.github.io/week_in_review/"><strong>First week!</strong></a>What I did my first week at Epicodus. Uses HTML, css and bootstrap.</p>
-        <h3>Animal rescue</h3>
-          <p><a href="https://mikearino.github.io/dog_rescue/"><strong>OMG there's hope for dogs!</strong></a>A dog rescue page that uses HTML and css.</p>
-        <h3>Island Vacation</h3>
-          <p><a href="https://mikearino.github.io/Island_vacation/"><strong>Magic Awaits</strong></a>Showcasing the Maldives. Uses Html and css.</p>
-        <h3>Wiener Dog Blog</h3>
-          <p><a href="https://mikearino.github.io/peppeps-blog/"><strong>Wiener Dog Blog!</strong></a>A blog for my wiener dog named PepPep. Uses Html and css.</p>
-        <h3>Band Website</h3>
-          <p><a href="https://mikearino.github.io/band_webpage/"><strong>A generic band site!</strong></a>A band website showcasing floats. Uses Html and css.</p>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Alaska</h3>
+            </div>
+            <div class="panel-body">
+              <p><a href="https://mikearino.github.io/Alaska/"><strong>Outside </strong></a>A place I would like to visit someday. Uses Html and bootstrap.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">My Week at Epicodus</h3>
+            </div>
+            <div class="panel-body">
+              <p><a href="https://mikearino.github.io/week_in_review/"><strong>First week! </strong></a>What I did my first week at Epicodus. Uses HTML, css and bootstrap.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Animal rescue</h3>
+            </div>
+            <div class="panel-body">
+              <p><a href="https://mikearino.github.io/dog_rescue/"><strong>OMG there's hope for dogs! </strong></a>A dog rescue page that uses HTML and css.</p>
+              </div>
+            </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Island Vacation</h3>
+            </div>
+            <div class="panel-body">
+              <p><a href="https://mikearino.github.io/Island_vacation/"><strong>Magic Awaits </strong></a>Showcasing the Maldives. Uses Html and css.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Wiener Dog Blog</h3>
+            </div>
+            <div class="panel-body">
+              <p><a href="https://mikearino.github.io/peppeps-blog/"><strong>Wiener Dog Blog! </strong></a>A blog for my wiener dog named PepPep. Uses Html and css.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Band Website</h3>
+            </div>
+            <div class="panel-body">
+              <p><a href="https://mikearino.github.io/band_webpage/"><strong>A generic band site! </strong></a>A band website showcasing floats. Uses Html and css.</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
         <h3>About this guy</h3>
         <p>I used to play with Legos, now I build out epic sites.</p>
@@ -43,7 +96,7 @@
           <li>Reach the Beach</li>
           <li>Mountainbike</li>
           <li>Riverfish</li>
-          <li>Synthesizering</li>
+          <li><span class="synth">Syn</span>the<span class="synth">siz</span>er<span class="synth">ing</span></li>
           <li>Make Joke</li>
         </ol>
 
@@ -51,11 +104,17 @@
         <div class="sidebar">
           <h4 id="link">Links</h4>
           <ul>
+            <li><a href="https://github.com/mikearino">GitHub</a></li>
             <li><a href="mailto:mikeylofgren@gmail.com?subject=feedback">Email</a></li>
             <li><a href="https://www.instagram.com/mikearino/">Insta</a></li>
             <li><a href="https://www.facebook.com/mike.lofgren.92">FB</a></li>
           </ul>
         </div>
+
+        <blockquote>
+          <p>"Most people think that t-rexes can't clap because they have short arms, but really it's because they are dead."</p>
+          <footer>Noone</footer>
+        </blockquote>
 
     </div>
   </body>
