Add color to panel background and change text color for blockquote and sidebar links.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="row">
         <div class="col-md-4">
-          <div class="panel panel-info">
+          <div class="panel panel-danger">
             <div class="panel-heading">
               <h3 class="panel-title">Alaska</h3>
             </div>
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="panel panel-info">
+          <div class="panel panel-danger">
             <div class="panel-heading">
               <h3 class="panel-title">My Week at Epicodus</h3>
             </div>
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="panel panel-info">
+          <div class="panel panel-danger">
             <div class="panel-heading">
               <h3 class="panel-title">Animal rescue</h3>
             </div>
@@ -49,7 +49,7 @@
 
       <div class="row">
         <div class="col-md-4">
-          <div class="panel panel-info">
+          <div class="panel panel-danger">
             <div class="panel-heading">
               <h3 class="panel-title">Island Vacation</h3>
             </div>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="panel panel-info">
+          <div class="panel panel-danger">
             <div class="panel-heading">
               <h3 class="panel-title">Wiener Dog Blog</h3>
             </div>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="panel panel-info">
+          <div class="panel panel-danger">
             <div class="panel-heading">
               <h3 class="panel-title">Band Website</h3>
             </div>
@@ -80,6 +80,7 @@
         </div>
       </div>
 
+      <div class="about">
         <h3>About this guy</h3>
         <p>I used to play with Legos, now I build out epic sites.</p>
 
@@ -99,6 +100,8 @@
           <li><span class="synth">Syn</span>the<span class="synth">siz</span>er<span class="synth">ing</span></li>
           <li>Make Joke</li>
         </ol>
+      </div>
+
 
 
         <div class="sidebar">
@@ -113,7 +116,7 @@
 
         <blockquote>
           <p>"Most people think that t-rexes can't clap because they have short arms, but really it's because they are dead."</p>
-          <footer>Noone</footer>
+          <footer>No one</footer>
         </blockquote>
 
     </div>
