Change panel from danger to info.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="row">
         <div class="col-md-4">
-          <div class="panel panel-danger">
+          <div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title">Alaska</h3>
             </div>
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="panel panel-danger">
+          <div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title">My Week at Epicodus</h3>
             </div>
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="panel panel-danger">
+          <div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title">Animal rescue</h3>
             </div>
@@ -49,7 +49,7 @@
 
       <div class="row">
         <div class="col-md-4">
-          <div class="panel panel-danger">
+          <div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title">Island Vacation</h3>
             </div>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="panel panel-danger">
+          <div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title">Wiener Dog Blog</h3>
             </div>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="panel panel-danger">
+          <div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title">Band Website</h3>
             </div>
