Change panel body to pink, change panel title background to info. Add images to about me section.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="jumbotron">
         <h1>Feature <em>future</em></h1>
       </div>
-        <img src="media/Me.jpg" alt="A picture of a person on a bike">
+        <img src="media/Me.jpeg" alt="A picture of a person on a bike">
         <h2>Projects</h2>
 
       <div class="row">
@@ -81,26 +81,30 @@
       </div>
 
       <div class="about">
-        <h3>About this guy</h3>
-        <p>I used to play with Legos, now I build out epic sites.</p>
-
-        <h4>Where I'm from</h4>
         <ul>
+          <li><h3>About</h3></li>
+          <li><p>Non stop web development with a passion for the outdoors.</p></li><br><br>
+          <li>Reach the Beach</li>
+          <img src="media/Be.jpeg" alt="A person with a bicycle">
+          <li>Mountainbiking</li>
+          <img src="media/Mb.jpeg" alt="Mountainbiking">
+          <li>Riverfishing</li>
+          <img src="media/River.jpeg" alt="A river.">
+          <li><span class="synth">Syn</span>the<span class="synth">siz</span>er<span class="synth">s</span></li>
+          <img src="media/Oo.jpeg" alt="Half and half face.">
+          <li>Laughing</li>
+          <img src="media/Br.jpeg" alt="Steve Brule">
+        </ul>
+      </div>
+
+        <h4>#Me</h4>
+        <ol>
           <li>Portland native</li>
           <li>Background in motorcycle mechanics</li>
           <li>Relentless knowledge of beer and wine</li>
-          <li>Stoked on web development</li>
-        </ul>
-
-        <h4>What I like to do</h4>
-        <ol>
-          <li>Reach the Beach</li>
-          <li>Mountainbike</li>
-          <li>Riverfish</li>
-          <li><span class="synth">Syn</span>the<span class="synth">siz</span>er<span class="synth">ing</span></li>
-          <li>Make Joke</li>
+          <li>Stoked on web development</li><br><br><br>
         </ol>
-      </div>
+
 
 
 
