Change text color, fix image sizing.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Feature <em>future</em></h1>
+        <h1>Mike<em>Lofgren</em></h1>
       </div>
         <img src="media/Me.jpeg" alt="A picture of a person on a bike">
         <h2>Projects</h2>
@@ -80,10 +80,10 @@
         </div>
       </div>
 
+      <h3>About</h3>
+      <p>Non stop web development with a passion for the outdoors.</p>
       <div class="about">
         <ul>
-          <li><h3>About</h3></li>
-          <li><p>Non stop web development with a passion for the outdoors.</p></li><br><br>
           <li>Reach the Beach</li>
           <img src="media/Be.jpeg" alt="A person with a bicycle">
           <li>Mountainbiking</li>
