Change main image and h2 text.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Mike<em>Lofgren</em></h1>
+        <h1>Mike<em> Lofgren</em></h1>
       </div>
-        <img src="media/Me.jpeg" alt="A picture of a person on a bike">
-        <h2>Projects</h2>
+        <img src="media/Be.jpeg" alt="A picture of a person on a bike">
+        <h2>HI! Here are some projects I did.</h2>
 
       <div class="row">
         <div class="col-md-4">
@@ -84,8 +84,8 @@
       <p>Non stop web development with a passion for the outdoors.</p>
       <div class="about">
         <ul>
-          <li>Reach the Beach</li>
-          <img src="media/Be.jpeg" alt="A person with a bicycle">
+          <li>Reachin' the Beach</li>
+          <img src="media/Beach.jpeg" alt="A person with a bicycle">
           <li>Mountainbiking</li>
           <img src="media/Mb.jpeg" alt="Mountainbiking">
           <li>Riverfishing</li>
