--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
       <blockquote>
           <p>"Most people think that t-rexes can't clap because they have short arms, but really it's because they are dead."</p>
-          <footer>No one</footer>
+          <footer>Unknown</footer>
       </blockquote>
     </div>
   </body>
