--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Mike<em> Lofgren</em></h1>
       </div>
 
-        <img src="media/Be.jpeg" alt="A picture of a person on a bike">
-        <h2>HI! Here are some projects I did.</h2>
+      <img src="media/Be.jpeg" alt="A picture of a person on a bike">
+      <h2>Pages</h2>
 
       <div class="row">
         <div class="col-md-4">
