Add break between anchor and paragraphs.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <h3 class="panel-title">Alaska</h3>
             </div>
             <div class="panel-body">
-              <p><a href="https://mikearino.github.io/Alaska/"><strong>Outside </strong></a>A place I would like to visit someday. Uses Html and bootstrap.</p>
+              <p><a href="https://mikearino.github.io/Alaska/"><strong>Outside </strong></a><br>A place I would like to visit someday. Uses Html and bootstrap.</p>
             </div>
           </div>
         </div>
@@ -32,7 +32,7 @@
               <h3 class="panel-title">My Week at Epicodus</h3>
             </div>
             <div class="panel-body">
-              <p><a href="https://mikearino.github.io/week_in_review/"><strong>First week! </strong></a>What I did my first week at Epicodus. Uses HTML, css and bootstrap.</p>
+              <p><a href="https://mikearino.github.io/week_in_review/"><strong>First week! </strong></a><br>What I did my first week at Epicodus. Uses HTML, css and bootstrap.</p>
             </div>
           </div>
         </div>
@@ -42,7 +42,7 @@
               <h3 class="panel-title">Animal rescue</h3>
             </div>
             <div class="panel-body">
-              <p><a href="https://mikearino.github.io/dog_rescue/"><strong>OMG there's hope for dogs! </strong></a>A dog rescue page that uses HTML and css.</p>
+              <p><a href="https://mikearino.github.io/dog_rescue/"><strong>OMG there's hope for dogs! </strong></a><br>A dog rescue page that uses HTML and css.</p>
               </div>
             </div>
         </div>
@@ -55,7 +55,7 @@
               <h3 class="panel-title">Island Vacation</h3>
             </div>
             <div class="panel-body">
-              <p><a href="https://mikearino.github.io/Island_vacation/"><strong>Magic Awaits </strong></a>Showcasing the Maldives. Uses Html and css.</p>
+              <p><a href="https://mikearino.github.io/Island_vacation/"><strong>Magic Awaits </strong></a><br>Showcasing the Maldives. Uses Html and css.</p>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
               <h3 class="panel-title">Wiener Dog Blog</h3>
             </div>
             <div class="panel-body">
-              <p><a href="https://mikearino.github.io/peppeps-blog/"><strong>Wiener Dog Blog! </strong></a>A blog for my wiener dog named PepPep. Uses Html and css.</p>
+              <p><a href="https://mikearino.github.io/peppeps-blog/"><strong>Puppy time </strong></a><br>A blog for my wiener dog named PepPep. Uses Html and css.</p>
             </div>
           </div>
         </div>
@@ -75,7 +75,7 @@
               <h3 class="panel-title">Band Website</h3>
             </div>
             <div class="panel-body">
-              <p><a href="https://mikearino.github.io/band_webpage/"><strong>A generic band site! </strong></a>A band website showcasing floats. Uses Html and css.</p>
+              <p><a href="https://mikearino.github.io/band_webpage/"><strong>A generic band site! </strong></a><br>A band website showcasing floats. Uses Html and css.</p>
             </div>
           </div>
         </div>
