Resolve merge conflict with gh-pages.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
 
       <blockquote>
-          <p>"Most people think that t-rexes can't clap because they have short arms, but really it's because they are dead."</p>
+          <p>"Most people think that T-rexes can't clap because they have short arms, but really it's because they are dead."</p>
           <footer>Unknown</footer>
       </blockquote>
     </div>
